@@ -15,17 +15,21 @@
 -->
 <!-- ✿✿✿✿ ʕ •ᴥ•ʔ/ ︻デ═一 -->
 
-LAST TASK : #33
+LAST TASK : #38
 
 TO DO
-    *Task #27 : [v1.6.0] Set up a system allowing to click on the screen with any app started (i.e. select that point which is on that component of that app)
+    Task #10 : [v1.6.1] Select several points to click on
     Task #20 : [v1.7.0] Make a Service reachable from third parties which will launch the process instead of using the main activity
     Task #33 : Unit Tests and Instrumented tests
 
-    Task #10 : Select several points to click on
+    Task #38 : Link with Appium or other things ?
     Task #2  : Movable floating action button
-    Task #19 : Use "Tooleap" to have a smooth and flexible GUI ?
     Task #16 : Handle swipes, long presses, ...
+    Task #34 : Lod LUA scripts to make the clicks
+    Task #35 : Fabric.io, Crashlytics and other tools ?
+    Task #36 : Tablets support
+    Task #37 : Android Wear
+
 
 
 
