@@ -30,8 +30,9 @@
     <string name="info_message_stop">Arrête le processus de click</string>
     <string name="info_message_request_su">Demande les accès SU</string>
     <string name="info_message_su_granted">L\'accès SU a été attribué :-)</string>
+    <string name="info_message_new_point">Sélectionner un point sur l\'écran</string>
+    <string name="info_message_invite_new_point">Sélectionnez un point sur l\'écran</string>
     <string name="error_message_su_not_granted">L\'accès SU a été refusé x-(</string>
-
     <string name="error_su_missing">Avez-vous rooté votre appareil Android au préalable ? C\'est obligatoire.</string>
 
     <string name="warning_hazard_repeat_endless_title">Operation risquée</string>
